<resources>
    <string name="app_name">LoanEligibility</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="v">FirstFrag</string>
    <string name="s">some</string>
    <string name="gender_prompt">Choose a country</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="education_prompt">Choose a country</string>
    <string-array name="education">
        <item>Graduated</item>
        <item>Not Graduated</item>
    </string-array>
    <string name="married_prompt">Choose a country</string>
    <string-array name="married">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="self_prompt">Choose a country</string>
    <string-array name="selfemployed">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="Area_prompt">Choose a country</string>
    <string-array name="Area">
        <item>Urban</item>
        <item>Rural</item>
        <item>Semi Urban</item>
    </string-array>
</resources>

